test/data/semantic-errors/greaterthan-must-have-integer-operands.jen
notAnInteger := 'ate'
anInteger := 7
aBinaryExpression := notAnInteger > anInteger
